<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android" 
	    android:background="#FFFFFF"
        android:key="sub_notifications"
        android:title="@string/sub_notifications">
        <PreferenceCategory android:title="@string/sub_notifications" >
         <SwitchPreference
   		 android:key="notifications"
   		 android:defaultValue="true"
    	 android:title="@string/settings_sms_notifications" />
         
         <SwitchPreference
   		 android:key="all_sms"
   		 android:defaultValue="true"
   		 android:dependency="notifications"
    	 android:title="@string/settings_sms_notification_all_sms" 
    	 android:summary="@string/settings_sms_notification_all_sms_sum"/>
         
         <SwitchPreference
   		 android:key="notification_fbs"
   		 android:defaultValue="true"
    	 android:title="@string/settings_fb_notifications" />
         
         <SwitchPreference
   		 android:key="all_fb"
   		 android:defaultValue="true"
   		 android:dependency="notification_fbs"
    	 android:title="@string/settings_fb_notification_all_fb" 
    	 android:summary="@string/settings_fb_notification_all_fb_sum"/>
         
         <SwitchPreference
   		 android:key="notification_mail"
   		 android:defaultValue="true"
    	 android:title="@string/settings_mail_notification_mail" />
         
         <SwitchPreference
   		 android:key="all_mail"
   		 android:defaultValue="true"
   		 android:dependency="notification_mail"
    	 android:title="@string/settings_mail_notification_all_mail" 
    	 android:summary="@string/settings_mail_notification_all_mail_sum"/>
         
         <ListPreference 
		    android:key="mail_pull_intervall"
		    android:title="@string/settings_mail_pull_intervall"
		    android:entries="@array/mail_pull_intervall_names"
		    android:entryValues="@array/mail_pull_intervall_data"
		    android:summary="@string/settings_mail_notification_mail_pull_sum"/>
         
        </PreferenceCategory>
        <PreferenceCategory android:title="@string/settings_settings_tab" >
        <SwitchPreference
   		 android:key="vibration"
   		 android:defaultValue="true"
    	 android:title="@string/settings_vibration" />
        
        <SwitchPreference
   		 android:key="headsup"
   		 android:defaultValue="true"
    	 android:title="@string/settings_headsup" />
        
        <Preference
            android:key="notification_light"
            android:summary="@string/noti_light_sum"
            android:title="@string/noti_light" />
        </PreferenceCategory>
    </PreferenceScreen>