<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:emojicon="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearlayout_root_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/toolbar"/>
    <FrameLayout
  android:layout_width="match_parent"
  android:layout_height="match_parent">
<RelativeLayout 
    android:id="@+id/layoutgd"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <GridLayout
        android:id="@+id/GridLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:columnCount="1" >
    </GridLayout>

    <ImageView
        android:id="@+id/keyCode"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_below="@+id/GridLayout1"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/keyCode"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/key_overview_looks_same"
        
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#212121" />

    <TextView
        android:id="@+id/creation_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_marginLeft="33dp"
        android:layout_toRightOf="@+id/textView3"
        android:text="TextView"
        android:textColor="#212121" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="32dp"
        android:text="@string/key_overview_creation_date"
        android:textColor="#212121" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:layout_marginTop="-10dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start|top"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="0dp"
            android:text="@string/key_overview_algorithm"
            android:textColor="#212121" />

        <TextView
            android:id="@+id/algo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28dp"
            android:text="Textvew"
            android:textColor="#212121" />
    </LinearLayout>

    <com.gc.materialdesign.views.ButtonRectangle
        android:id="@+id/deleteKey"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
       	android:background="#C62828"
        android:text="@string/activity_key_overview_delete_key"/>

</RelativeLayout>

   <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@drawable/toolbar_dropshadow" />
</FrameLayout>
</LinearLayout>